<resources>
    <string name="app_name">FixedBeams-phone</string>
    <string name="tituloDetallesTextView">FixedBeams-phone</string>
    <string name="categoriaDetallesTextView">FixedBeams-phone</string>
    <string name="detallesDetallesTextView">FixedBeams-phone</string>
    <string name="resumenDetallesTextView">"DW331K Características
Potente motor de 6,5 Amps con velocidad variable que proporciona un corte rápido hasta 3,100 carreras por minuto
Cuenta con velocidad variable que permite controlar los cortes por minuto, para trabajar en todo tipo de aplicaciones"</string>
    <string-array name="opciones_entrega">
        <item>A domicilio</item>
        <item>Personalmente</item>
    </string-array>
    <string name="app_title">FexedBeams</string>
    <string name="logo_fixedBeams">A saw as the logo</string>
    <string name="user_name">User name</string>
    <string name="avatar_image">Avatar image</string>
    <string name="button_search">Search button</string>
    <string name="button_cart">Shopping cart button</string>
    <string name="location">Location</string>


    <string name="imageButton_tools">Tool button</string>
    <string name="imageButton_material">Material button</string>
    <string name="imageButton_equipment">Equipment button</string>


    <string name="imageProduct">A image from a product</string>
    <string name="discounts_total">Shopping Cart</string>
    <string name="button_continue">Continue</string>
    <string name="units_textview">Units:</string>
    <string name="textView_ItemNumber">0</string>
    <string name="textView_priceAccumulated">$ 0.00</string>
    <string name="button_viewCart">View cart</string>
    <string name="textView_productName">Product name</string>
    <string name="textView_productDescription">Product description</string>
    <string name="textView_productPrice">$ 0.00</string>
    <string name="imageView_product">Product photo</string>
    <string name="button_addProduct">Add product</string>
    <string name="textViewIniciarSesion">"Iniciar sesión "</string>
    <string name="textViewRegistrate">Regístrate</string>
    <string name="editTextNameUser">Nombre</string>
    <string name="editTextMail">Correo Electronico</string>
    <string name="editTextPassword">Contraseña</string>
    <string name="editTextPasswordConfirm">Confirmar Contraseña</string>
    <string name="buttonRegistrarUser">REGISTRATE</string>
    <string name="textViewFixedBeams">Fixed</string>
    <string name="textViewBeams">Beams</string>
    <string name="textViewHerramientas">Herramientas</string>
    <string name="buttonVerCarrito">Ver Carrito</string>
    <string name="textViewUserName">User Name</string>
    <string name="textViewLocation">Location</string>
    <string name="button_signIn">INICIAR SESIÓN</string>
    <string name="editText_usernameEmail">Nombre o correo electrónico</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="imageButton_vehicles">Vehicle button</string>
    <string name="imageButton_teams">Team button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView_category">Category image</string>
    <string name="textView_category">Category</string>
    <string name="textView_search">Search</string>
    <string name="textView_serachProduct">Product:</string>
    <string name="editText_searchProduct">Write the product\'s name</string>
    <string name="checkBoxRecordarme">Recordarme</string>
    <string name="tvDescripcionCategorie">Descripcion de la categoria</string>
    <string name="textView_money">money</string>
    <string name="editText_userName">User name</string>
    <string name="checkBox_keepOpen">Keep open</string>
    <string name="textView_stock">Stock</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_delete">Delete</string>
</resources>