<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_product"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageView_product"
        app:layout_constraintBottom_toBottomOf="@+id/textView_productPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saw" />

    <TextView
        android:id="@+id/textView_productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_productName"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_product"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_productDescription"
        android:layout_width="247dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textView_productDescription"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_productName"
        app:layout_constraintTop_toBottomOf="@+id/textView_productName" />

    <TextView
        android:id="@+id/textView_productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_productPrice"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/textView_productDescription"
        app:layout_constraintTop_toBottomOf="@+id/textView_productDescription" />

    <Button
        android:id="@+id/button_addProduct"
        android:layout_width="113dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FECB67"
        android:text="@string/button_addProduct"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_productPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_productDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>