<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistroActivity">

    <TextView
        android:id="@+id/textViewIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/textViewIniciarSesion"
        android:textColor="#131201"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/textViewRegistrate"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNameUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextNameUser"
        app:srcCompat="@drawable/ic_userlogin" />

    <EditText
        android:id="@+id/editTextNameUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editTextNameUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrate" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editTextMail"
        app:layout_constraintEnd_toEndOf="@+id/editTextNameUser"
        app:layout_constraintStart_toStartOf="@+id/editTextNameUser"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameUser" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextMail"
        app:layout_constraintStart_toStartOf="@+id/editTextMail"
        app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

    <ImageView
        android:id="@+id/imageViewMail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMail"
        app:layout_constraintEnd_toStartOf="@+id/editTextMail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewUser"
        app:layout_constraintTop_toTopOf="@+id/editTextMail"
        app:srcCompat="@drawable/ic_maillogin" />

    <ImageView
        android:id="@+id/imageViewPassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordRegister"
        app:layout_constraintEnd_toStartOf="@+id/editTextPasswordRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPasswordRegister"
        app:srcCompat="@drawable/ic_passwordlogin" />

    <ImageView
        android:id="@+id/imageViewPasswordConfirm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordRegisterConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister"
        app:srcCompat="@drawable/ic_passwordlogin" />

    <EditText
        android:id="@+id/editTextPasswordRegisterConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editTextPasswordConfirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister" />

    <Button
        android:id="@+id/buttonRegistrarUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:backgroundTint="#ECD617"
        android:text="@string/buttonRegistrarUser"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegisterConfirm" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="409dp"
        android:layout_height="107dp"
        android:foregroundTintMode="src_over"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_calle" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="89dp"
        android:layout_height="120dp"
        android:layout_marginBottom="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:srcCompat="@drawable/ic_truck" />

    <CheckBox
        android:id="@+id/checkBoxRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkBoxRecordarme"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextPasswordRegister"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="@+id/imageViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPasswordConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>